# LightXonix

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  License.md
cmake/: ClangFormat.cmake
dependences/: CMakeLists.txt
dependences/glad/: CMakeLists.txt
dependences/glad/include/glad/: glad.h
dependences/glad/src/: glad.c
resources/: CMakeLists.txt
resources/Shaders/: PhongShader.fs  PhongShader.vs  SkyboxShader.fs  SkyboxShader.vs  simple.frag  simple.vert
resources/Shaders/Light/: PointLight.glsl
resources/Shaders/Material/: PhongMaterial.glsl
resources/Textures/: simple.dds
source/: CMakeLists.txt  LightXonix.hpp  Main.cpp
source/Engine/: Camera.cpp  Camera.hpp  Engine.hpp  Exception.hpp  Game.cpp  Game.hpp  GameObject.hpp  GameWindow.cpp  GameWindow.hpp  InputSystem.cpp  InputSystem.hpp  KeyMap.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
